chore: update dependencies in package.json
- downgraded @react-native-async-storage/async-storage to 2.1.2
- downgraded @react-native-community/slider to 4.5.6
- updated expo to 53.0.11
- updated expo-blur to 14.1.5
- updated expo-image to 2.3.0
- updated expo-router to 5.1.0
- updated expo-splash-screen to 0.30.9
- updated expo-symbols to 0.4.5
- updated expo-system-ui to 5.0.8
- updated react-native to 0.79.3
- updated react-native-screens to 4.11.1
- added expo-dev-client as a dependency

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Coffe",
-    "slug": "Coffe",
+    "slug": "coffee-time",
     "version": "1.0.0",
     "orientation": "portrait",
     "scheme": "coffe",
@@ -14,7 +14,8 @@
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.emilhakanzon.coffeetime"
     },
     "web": {
       "bundler": "metro",
@@ -34,6 +35,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2e077aa7-bd35-4025-aa49-c94d478cd5d2"
+      }
+    },
+    "owner": "emil-hakanzon"
   }
 }
