Add new coffee images to assets
- Added coffee3.png (2081 bytes) to the assets directory.
- Added coffeeIcon2.png (7450 bytes) to the assets directory.

--- a/app.json
+++ b/app.json
@@ -21,7 +21,21 @@
       "bundler": "metro",
       "output": "static"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "backgroundColor": "#232323",
+          "image": "./assets/coffee3.png",
+          "dark": {
+            "image": "./assets/coffee3.png",
+            "backgroundColor": "#000000"
+          },
+          "imageWidth": 200
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     },
@@ -32,5 +46,6 @@
       }
     },
     "owner": "emil-hakanzon",
+    "icon": "./assets/caffeeicon.png"
   }
 }
