--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/slider": "4.5.6",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "^4.5.6",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -39,20 +39,21 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "^7.2.4",
     "node-fetch": "^3.3.2",
     "react": "19.0.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-edge-to-edge": "^1.6.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.13.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
